--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
-
     "es6-promise": "*",
     "fuzzy": "^0.1.0",
-    "tether": "*",
-
     "griddle-callback": "0.2.0",
     "griddle-react": "0.2.4",
     "moment": "*",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
     "react-async": "^2.0.1",
     "react-bootstrap": "*",
-    "react-onclickoutside": "*"
+    "react-dom": "^15.6.1",
+    "react-onclickoutside": "*",
+    "react-scripts": "1.0.13",
+    "tether": "*"
   },
   "scripts": {
     "start": "react-scripts start",
